# workflow2.0

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
design/: myworkflow_refactor_design.md
design/addition/: 00_OVERVIEW.md  01_ARCHITECTURE.md  02_PROTOCOL_AND_DSL.md  03_RUNTIME_AND_HARNESS.md  README.md
design/change/: readme.md
design/change/config/: config层改动总结.md  settings_add.md
design/change/prompts/: evaluator_system_v1_add.md  generator_system_v1_add.md  planner_system_v1_add.md  prompts层改动总结.md
design/change/workflows/: workflows层的改动总结.md
design/opus/: 00_OVERVIEW.md  01_ARCHITECTURE.md  02_PROTOCOL_AND_DSL.md  03_RUNTIME_AND_HARNESS.md  重构方案补充_REFACTOR_ADDENDUM.md
new_src/: main.py
new_src/agent/engine/: condition_evaluator.py  execution_hooks.py  execution_observer.py  parser.py  resume_strategy.py  runner.py  step_executor.py  workflow_state.db
new_src/agent/infra/: __init__.py  context_manager.py  error_policy.py  llm_factory.py  skill_registry.py  state_store.py  variable_mapper.py  workflow_registry.py
new_src/agent/orchestration/: champion_tracker.py
new_src/agent/skills/: base.py
new_src/config/: settings.py
new_src/docs/: meta_workflow_rollout.md
new_src/prompts/: evaluator_system_v1.md  generator_system_v1.md  planner_system_v1.md
new_src/tests/config/: test_settings.py
new_src/tests/e2e/: conftest.py  test_generated_workflow_execution.py  test_meta_workflow_generation.py
new_src/tests/engine/: conftest.py  test_condition_evaluator.py  test_execution_hooks.py  test_parser.py  (+5 more)
(+172 files in other folders)
